--- a/static/templates/test/01-module2/step1.tmpl
+++ b/static/templates/test/01-module2/step1.tmpl
@@ -1,14 +1,5 @@
 #!/bin/bash	
 
-set -e	
+echo hello from module 2	
 
-#linstor	
-
-read -p "Are you sure? " -n 1 -r	
-echo    # (optional) move to a new line	
-if [[ $REPLY =~ ^[Yy]$ ]]	
-then	
-    echo hello from test 2	
-fi
-
-sleep 5
+sleep 2
