--- a/static/templates/sailfish/00-prereq/00-check1.tmpl
+++ b/static/templates/sailfish/00-prereq/00-check1.tmpl
@@ -1,1 +1,5 @@
-echo 'executing pre-check 1, checking whether OS is {{.Values.Required.OS}} and stuff'
+echo 'SCRIPT VERSION : {{.values.sailfish.version}}'
+
+echo 'executing pre-check 1, checking whether OS is {{.values.sailfish.os}} and stuff'
+
+sleep 2
