--- a/static/templates/sailfish/10-install/00-install1.tmpl
+++ b/static/templates/sailfish/10-install/00-install1.tmpl
@@ -1,6 +1,9 @@
+echo 'SCRIPT VERSION : {{.values.sailfish.version}}'
+
 echo 'installing sailfish component 1'
 
-{{- range $machine := .Values.Required.Machines}}
+{{- range $machine := .values.sailfish.machines}}
 echo 'installing on {{$machine}}'
 echo ...
+sleep 1
 {{- end}}
