--- a/webapp/src/components/Status/Install.module.scss
+++ b/webapp/src/components/Status/Install.module.scss
@@ -7,12 +7,12 @@
   padding: 1.625rem 1.625rem 2.125rem 1.625rem;
 
   .module {
-    width: 70%;
+    // width: 70%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     .loadersHolder {
       width: 100%;
     }
   }
-
 
   h1 {
     size: 1.75rem;
