state icons for tasks

--- a/webapp/src/components/Status/Install.module.scss
+++ b/webapp/src/components/Status/Install.module.scss
@@ -51,6 +51,9 @@
   .errorFilled {
     fill: red;
   }
+  .warningFilled{
+    fill: darkgoldenrod
+  }
 
   .loaderIconHolder {
     // Dimensions set to match inline loader
